--- a/plano.html
+++ b/plano.html
@@ -78,18 +78,10 @@
             <section id="sec-mat">
                 <h2>Nossas Matérias</h2>
                 <div id="materias">
-                    <a href="materias.html"><div class="mat">Biologia <i class="fa-solid fa-leaf"></i></div></a>
-                    <a href="materias.html"><div class="mat">Química <i class="fa-solid fa-flask"></i></div></a>
-                    <a href="materias.html"><div class="mat">Física <i class="fa-solid fa-atom"></i></div></a>
-                    <a href="materias.html"><div class="mat">Matemática <i class="fa-solid fa-square-root-variable"></i></div></a>
-                    <a href="materias.html"><div class="mat">Língua <br>Portuguesa <i class="fa-solid fa-book-open"></i></div></a>
-                    <a href="materias.html"><div class="mat">Literatura <i class="fa-solid fa-book-bookmark"></i></div></a>
-                    <a href="materias.html"><div class="mat">História <i class="fa-solid fa-landmark-dome"></i></div></a>
-                    <a href="materias.html"><div class="mat">Geografia <i class="fa-solid fa-earth-americas"></i></div></a>
-                    <a href="materias.html"><div class="mat">Inglês <i class="fa-solid fa-language"></i> </div></a>
-                    <a href="materias.html"><div class="mat">Filosofia <i class="fa-solid fa-landmark"></i></div></a>
-                    <a href="materias.html"><div class="mat">Sociologia <i class="fa-solid fa-people-group"></i></div></a>
-                    <a href="materias.html"><div class="mat">Educação <br>Física <i class="fa-solid fa-futbol"></i></div></a>
+                    <a onclick="biologia()"><div class="mat">Biologia <i class="fa-solid fa-leaf"></i></div></a>
+                    <a onclick="quimica()"><div class="mat">Química <i class="fa-solid fa-flask"></i></div></a>
+                    <a onclick="fisica()"><div class="mat">Física <i class="fa-solid fa-atom"></i></div></a>
+                    <a onclick="matematica()"><div class="mat">Matemática <i class="fa-solid fa-square-root-variable"></i></div></a>
                 </div>
             </section>
             
