--- a/plano.html
+++ b/plano.html
@@ -132,4 +132,5 @@
 </script>
 <script src="script/mk_charts.js"></script>
 <script src="script/main.js"></script>
+<script src="script/token.js"></script>
 </html>
